# syracuse

./: CMakeLists.txt
src/: CMakeLists.txt  config-syracuse.hpp.in  main.cpp
src/core/: Sequence.cpp  Sequence.hpp  core.hpp
